--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "Gulp",
     "NPM"
   ],
-  "author": "Cristhian Morales @camoralesh27",
+  "author": "StudioIchi",
   "license": "ISC",
   "devDependencies": {
     "glob": "^10.4.2",
     "gulp": "^5.0.0",
+    "gulp-file-include": "^2.3.0",
     "gulp-sass": "^5.1.0",
     "gulp-terser": "^2.1.0",
     "sass": "^1.83.1",
